# SmallProject

./: .gitignore
Impulse-Nutrition/: .env.example  .gitignore  .mcp.json  CLAUDE.md  GEMINI.md  LLM.md  bigblue_orders_page.yml  generate_contract.py  outlook_bigblue_email.yml
Impulse-Nutrition/KolSquare/: filtered_prospects_042026.csv  plan_filtrage.md
Impulse-Nutrition/benchmark/: add_hypotheses.py  avis_clients.json  build_impulse_products.py  build_master.py  constants.py  empirical_recurrence.json.template  empirical_sales_velocity.json.template  generate_deck.py  generate_html_report.py  impulse_products.json  impulse_products_enriched.json  marche.json  master_data.json.backup  profitability_section.md  rapport_rentabilite_abonnement.html  recommendation_impulse.md  rentabilite.py  rentabilite_output.json  synthesis_table.html  synthesis_table.md  tech_stack.json  update_h2_quantity.py  ux_deep.json  ux_deep_screenshots.py  write_all_json.py  write_ux_deep.py
Impulse-Nutrition/bigblue_mcp/: pyproject.toml
Impulse-Nutrition/bigblue_mcp/src/: mcp_server.py
Impulse-Nutrition/common/: google_drive.py  google_sheets.py  http_mcp.py  instagram_client.py
Impulse-Nutrition/docs/: INDEX.md  case_sav_nouika_tiktok_20260415.md  deck_formation_ia_impulse.md  dm_decision_tree.md  kolsquare_filtering_rules.md  process_calculate_credits.md  process_conversation_archive.md  process_create_codes.md  process_create_orders.md  process_sav_unified.md  (+5 more)
Impulse-Nutrition/gorgias_mcp/: CLAUDE.md  personality.md  pyproject.toml
Impulse-Nutrition/gorgias_mcp/src/: mcp_server.py
Impulse-Nutrition/gorgias_mcp/src/gorgias_mcp/: __init__.py  cache.py  client.py  server.py  slim.py  tools.py  views.py
Impulse-Nutrition/gorgias_mcp/tests/: test_slim.py  test_tools.py  test_views.py
Impulse-Nutrition/shopify_mcp/: pyproject.toml
Impulse-Nutrition/shopify_mcp/src/: mcp_server.py
Instagram/: .mcp.json
svg-clover-tracer/: requirements.txt  trace_clover.py
(+290 files in other folders)
